...
        </>
      )}
      {isExistingUser === false && (
        <>
          <TextInput
            style={{ width: '100%', fontSize: 20, borderBottomWidth: 1, borderColor: '#B0B0B0', marginBottom: 24, color: '#1A330E', padding: 8 }}
            placeholder="Nome completo"
            placeholderTextColor="#B0B0B0"
            value={name}
            onChangeText={setName}
            autoCapitalize="words"
          />
          <TextInput
            style={{ width: '100%', fontSize: 20, borderBottomWidth: 1, borderColor: '#B0B0B0', marginBottom: 24, color: '#1A330E', padding: 8 }}
            placeholder="CPF"
            placeholderTextColor="#B0B0B0"
            value={cpf}
            onChangeText={setCpf}
            keyboardType="numeric"
            maxLength={14}
          />
...
