...
  wallet_ballance: 'Saldo da Carteira',
  valid_amount: 'Valor válido',
  Balance: 'Saldo',
  addMoneyTextInputPlaceholder: 'Digite o valor',
  pdf_error: 'Erro ao gerar PDF',
  promo_not_found: 'Promoção não encontrada',
  code: 'Código',
  min_order_value: 'Valor mínimo do pedido',
  
  // Fallbacks
  select_gateway: 'Selecionar Gateway',
  driver_income: 'Ganhos do Motorista',
  notifications: 'Notificações',
...
